// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> snapshot should match snapshot 1`] = `
<List
  aria-label="test"
  listSize={2}
>
  <ul
    className="md-list-wrapper"
  >
    <ListItemBase
      key="1"
    >
      <FocusRing
        isInset={false}
      >
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
          isInset={false}
        >
          <li
            className="md-list-item-base-wrapper"
            data-disabled={false}
            data-padded={false}
            data-shape="rectangle"
            data-size={40}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="listitem"
            tabIndex={-1}
          >
            ListItemBase 1
          </li>
        </FocusRing>
      </FocusRing>
    </ListItemBase>
    <ListItemBase
      key="2"
    >
      <FocusRing
        isInset={false}
      >
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
          isInset={false}
        >
          <li
            className="md-list-item-base-wrapper"
            data-disabled={false}
            data-padded={false}
            data-shape="rectangle"
            data-size={40}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="listitem"
            tabIndex={-1}
          >
            ListItemBase 2
          </li>
        </FocusRing>
      </FocusRing>
    </ListItemBase>
  </ul>
</List>
`;

exports[`<List /> snapshot should match snapshot with className 1`] = `
<List
  aria-label="test"
  className="example-class"
  listSize={2}
>
  <ul
    className="example-class md-list-wrapper"
  >
    <ListItemBase
      key="1"
    >
      <FocusRing
        isInset={false}
      >
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
          isInset={false}
        >
          <li
            className="md-list-item-base-wrapper"
            data-disabled={false}
            data-padded={false}
            data-shape="rectangle"
            data-size={40}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="listitem"
            tabIndex={-1}
          >
            ListItemBase 1
          </li>
        </FocusRing>
      </FocusRing>
    </ListItemBase>
    <ListItemBase
      key="2"
    >
      <FocusRing
        isInset={false}
      >
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
          isInset={false}
        >
          <li
            className="md-list-item-base-wrapper"
            data-disabled={false}
            data-padded={false}
            data-shape="rectangle"
            data-size={40}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="listitem"
            tabIndex={-1}
          >
            ListItemBase 2
          </li>
        </FocusRing>
      </FocusRing>
    </ListItemBase>
  </ul>
</List>
`;

exports[`<List /> snapshot should match snapshot with id 1`] = `
<List
  aria-label="test"
  id="example-id"
  listSize={2}
>
  <ul
    className="md-list-wrapper"
    id="example-id"
  >
    <ListItemBase
      key="1"
    >
      <FocusRing
        isInset={false}
      >
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
          isInset={false}
        >
          <li
            className="md-list-item-base-wrapper"
            data-disabled={false}
            data-padded={false}
            data-shape="rectangle"
            data-size={40}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="listitem"
            tabIndex={-1}
          >
            ListItemBase 1
          </li>
        </FocusRing>
      </FocusRing>
    </ListItemBase>
    <ListItemBase
      key="2"
    >
      <FocusRing
        isInset={false}
      >
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
          isInset={false}
        >
          <li
            className="md-list-item-base-wrapper"
            data-disabled={false}
            data-padded={false}
            data-shape="rectangle"
            data-size={40}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="listitem"
            tabIndex={-1}
          >
            ListItemBase 2
          </li>
        </FocusRing>
      </FocusRing>
    </ListItemBase>
  </ul>
</List>
`;

exports[`<List /> snapshot should match snapshot with style 1`] = `
<List
  aria-label="test"
  listSize={2}
  style={
    Object {
      "color": "pink",
    }
  }
>
  <ul
    className="md-list-wrapper"
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <ListItemBase
      key="1"
    >
      <FocusRing
        isInset={false}
      >
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
          isInset={false}
        >
          <li
            className="md-list-item-base-wrapper"
            data-disabled={false}
            data-padded={false}
            data-shape="rectangle"
            data-size={40}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="listitem"
            tabIndex={-1}
          >
            ListItemBase 1
          </li>
        </FocusRing>
      </FocusRing>
    </ListItemBase>
    <ListItemBase
      key="2"
    >
      <FocusRing
        isInset={false}
      >
        <FocusRing
          focusClass="md-focus-ring-wrapper children"
          focusRingClass="md-focus-ring-wrapper children"
          isInset={false}
        >
          <li
            className="md-list-item-base-wrapper"
            data-disabled={false}
            data-padded={false}
            data-shape="rectangle"
            data-size={40}
            onBlur={[Function]}
            onClick={[Function]}
            onDragStart={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="listitem"
            tabIndex={-1}
          >
            ListItemBase 2
          </li>
        </FocusRing>
      </FocusRing>
    </ListItemBase>
  </ul>
</List>
`;
